# new-self-checkout-reji

./: .gitignore  main.py  pyproject.toml  requirements.txt
config/: config.yaml
models/: best.pt
models/best.mlpackage/: Manifest.json
models/best.mlpackage/Data/com.apple.CoreML/: model.mlmodel
src/core/: __init__.py  device_notifier.py  device_state.py  rtsp_stream.py  screen_analyzer.py
src/utils/: __init__.py  config_loader.py  logger.py
